Fixes size of preview upload photo and spacing of buttons

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -51,3 +51,23 @@ form.link {
 .card {
   float: none;
 }
+
+.fileinput-preview img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	margin: 0 auto;
+	display: block;
+}
+
+.fileinput-preview {
+	margin: 0 auto;
+}
+
+.fileinput-new {
+	margin: 0 auto;
+}
+
+.top-space {
+	margin-top: 20px;
+}
